WIP - JS and CSS

--- a/index.html
+++ b/index.html
@@ -39,10 +39,16 @@
             <li><a class="navigation__link" href="#section__work">Work</a></li>
         </ul>
         <ul class="navigation__linksList navigation__linksList--socialMedia">
-            <li><a class="navigation__link" href="#"><span class="navigation__icon icon">&#xf099;</span></a></li>
-            <li><a class="navigation__link" href="#"><span class="navigation__icon icon">&#xf0e1;</span></a></li>
-            <li><a class="navigation__link" href="#"><span class="navigation__icon icon">&#xf09b;</span></a></li>
-            <li><a class="navigation__link" href="#"><span class="navigation__icon icon">&#xf0e0;</span></a></li>
+            <li><a class="navigation__link" target="_blank" rel="noopener noreferrer"
+                   href="https://twitter.com/AdrianBDesigns"><span class="navigation__icon icon">&#xf099;</span></a>
+            </li>
+            <li><a class="navigation__link" target="_blank" rel="noopener noreferrer"
+                   href="https://www.linkedin.com/in/adrianbece/"><span
+                    class="navigation__icon icon">&#xf0e1;</span></a></li>
+            <li><a class="navigation__link" target="_blank" rel="noopener noreferrer"
+                   href="https://github.com/codeAdrian"><span class="navigation__icon icon">&#xf09b;</span></a></li>
+            <li><a class="navigation__link" href="mailto:adrianbece@live.com"><span class="navigation__icon icon">&#xf0e0;</span></a>
+            </li>
         </ul>
     </nav>
 </header>
@@ -78,19 +84,19 @@
         <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon">&#xe802;</span></span>
             <h3 class="containerFeatures__title">eCommerce Development</h3>
             <div>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est ipsum, consectetur non egestas vitae,
-                gravida eget erat. Fusce lacinia tincidunt nulla, quis pulvinar purus commodo sit amet.
+                I've been working on development, maintenance and improvement of multiple Magento and Magento 2 projects for the last 3 years ranging from
+                small-scale websites to multi-store enterprise websites.
             </div>
         </article>
         <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon">&#xf2d0;</span></span>
             <h3 class="containerFeatures__title">Frontend Development</h3>
             <div>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est ipsum, consectetur non egestas vitae,
-                gravida eget erat. Fusce lacinia tincidunt nulla, quis pulvinar purus commodo sit amet.
+                I strive to keep up with the latest trends in Frontend development and selectively use the proven
+                technologies and frameworks to improve my workflow and deliver higher quality code.
             </div>
         </article>
         <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon">&#xf2d0;</span></span>
-            <h3 class="containerFeatures__title">Javascript Development</h3>
+            <h3 class="containerFeatures__title">JavaScript Development</h3>
             <div>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est ipsum, consectetur non egestas vitae,
                 gravida eget erat. Fusce lacinia tincidunt nulla, quis pulvinar purus commodo sit amet.
@@ -99,8 +105,8 @@
         <article class="containerFeatures__wrapper"><span class="containerFeatures__iconWrapper"><span class="icon">&#xe803;</span></span>
             <h3 class="containerFeatures__title">Frontend &amp; UX Audits</h3>
             <div>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce est ipsum, consectetur non egestas vitae,
-                gravida eget erat. Fusce lacinia tincidunt nulla, quis pulvinar purus commodo sit amet.
+                I have experience in analysing the websites from technical aspect and UX aspect and writing detailed report
+                addressing critical issues and providing solution suggestions.
             </div>
         </article>
     </section>
@@ -128,48 +134,95 @@
     </section>
     <section class="section containerWork" id="section__work">
         <h2 class="containerWork__title">Featured Professional Work And Personal Projects</h2>
-        <article class="containerWork__wrapper">
+        <article class="containerWork__wrapper containerWork__containerToggle">
             <ul class="containerWork__list">
                 <li class="containerWork__card">
                     <a href="#">
                         <div class="containerSecondary containerSecondary--pattern">
-                            <h3>Zee & Co</h3>
-                            <p>Inchoo Project</p>
+                            <h3 class="containerWork__cardTitle">Zee & Co</h3>
+                            <p>Inchoo Project | Magento</p>
                         </div>
-                        <img src="images/project-zee.png" />
+                        <img src="images/project-zee.png"/>
                     </a>
                 </li>
                 <li class="containerWork__card">
                     <a href="#">
                         <div class="containerSecondary containerSecondary--pattern">
-                            <h3>Zee & Co</h3>
-                            <p>Inchoo Project</p>
+                            <h3 class="containerWork__cardTitle">Zee & Co Blog</h3>
+                            <p>Inchoo Project | Wordpress</p>
                         </div>
-                        <img src="images/project-zee.png" />
+                        <img src="images/project-zee-blog.png"/>
+                    </a>
+                </li>
+                <li class="containerWork__card">
+                <a href="#">
+                    <div class="containerSecondary containerSecondary--pattern">
+                        <h3 class="containerWork__cardTitle">KEH Camera</h3>
+                        <p>Inchoo Project | Magento</p>
+                    </div>
+                    <img src="images/project-keh.png"/>
+                </a>
+            </li>
+                <li class="containerWork__card">
+                    <a href="#">
+                        <div class="containerSecondary containerSecondary--pattern">
+                            <h3 class="containerWork__cardTitle">O'Neills</h3>
+                            <p>Inchoo Project | Magento</p>
+                        </div>
+                        <img src="images/project-oneills.png"/>
                     </a>
                 </li>
                 <li class="containerWork__card">
                     <a href="#">
                         <div class="containerSecondary containerSecondary--pattern">
-                            <h3>Zee & Co</h3>
-                            <p>Inchoo Project</p>
+                            <h3 class="containerWork__cardTitle">Inchoo</h3>
+                            <p>Inchoo Project | Wordpress</p>
                         </div>
-                        <img src="images/project-zee.png" />
+                        <img src="images/project-inchoo.png"/>
                     </a>
                 </li>
                 <li class="containerWork__card">
                     <a href="#">
                         <div class="containerSecondary containerSecondary--pattern">
-                            <h3>Zee & Co</h3>
-                            <p>Inchoo Project</p>
+                            <h3 class="containerWork__cardTitle">Image 2 ASCII</h3>
+                            <p>Personal Project | C#</p>
                         </div>
-                        <img src="images/project-zee.png" />
+                        <img src="images/project-ascii.png"/>
+                    </a>
+                </li>
+
+                <li class="containerWork__card">
+                    <a href="#">
+                        <div class="containerSecondary containerSecondary--pattern">
+                            <h3 class="containerWork__cardTitle">Histogram-Based Search</h3>
+                            <p>Personal Project | C#</p>
+                        </div>
+                        <img src="images/project-search.png"/>
+                    </a>
+                </li>
+                <li class="containerWork__card">
+                    <a href="#">
+                        <div class="containerSecondary containerSecondary--pattern">
+                            <h3 class="containerWork__cardTitle">Hexagonal Melody</h3>
+                            <p>Personal Project | C#</p>
+                        </div>
+                        <img src="images/project-hex.png"/>
+                    </a>
+                </li>
+                <li class="containerWork__card">
+                    <a href="#">
+                        <div class="containerSecondary containerSecondary--pattern">
+                            <h3 class="containerWork__cardTitle">Foodly</h3>
+                            <p>Personal Project | HTML, CSS, JS, PHP</p>
+                        </div>
+                        <img src="images/project-foodly.png"/>
                     </a>
                 </li>
             </ul>
-        </article>
-        <article class="containerWork__buttonWrapper">
-            <button class="button button-cta">Show more projects <span class="icon button__icon">&#xe801;</span></button>
+            <div class="containerWork__buttonWrapper">
+                <button onclick="codeAdrianShowMore.toggle(this);" class="button button-cta">Show more projects <span
+                        class="icon button__icon">&#xe801;</span></button>
+            </div>
         </article>
     </section>
 </main>
@@ -216,10 +269,12 @@
     </div>
 </footer>
 <script
-        src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
         crossorigin="anonymous"></script>
 <script src="./js/smoothWheel.min.js"></script>
 <script src="./js/scrollPosition.min.js"></script>
+<script src="./js/smoothScroll.min.js"></script>
+<script src="./js/showMore.min.js"></script>
 </body>
 </html>
